# absolute

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
examples/: gen_seed.rs
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: api-stack.ts
scripts/: create-table.sh  deploy.sh  drop-table.sh  fetch-syscall-tbl.sh  seed.json  seed.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/domain/: mod.rs  register.rs  syscall.rs
src/handlers/: mod.rs  registers.rs  syscalls.rs
src/repository/: ddb.rs  mod.rs
